<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_xs"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?attr/colorSecondary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="@dimen/space_xs"
            android:textSize="@dimen/font_size_m"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textDirection="locale"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/header_score"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_l"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            tools:text="1000"/>

    </LinearLayout>

    <include
        layout="@layout/layout_progress"
        android:id="@+id/container_question_progress"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        tools:visibility="visible"/>

    <include
        layout="@layout/layout_error"
        android:id="@+id/container_question_error"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        tools:visibility="gone"/>

    <ScrollView
        android:id="@+id/container_question_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_question_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_xs"
                android:text="@string/header_question"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Header"/>

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_xs"
                android:textSize="@dimen/font_size_m"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_question_header"
                tools:text="Very long question"/>

            <TextView
                android:id="@+id/txt_answer_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_xs"
                android:text="@string/header_answer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_question"
                style="@style/Header"/>

            <EditText
                android:id="@+id/edt_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_answer"
                android:padding="@dimen/space_xs"
                android:textSize="@dimen/font_size_m"
                android:inputType="text"
                android:importantForAutofill="no"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_answer_header"/>

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_s"
                android:text="@string/action_skip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_check"
                app:layout_constraintTop_toBottomOf="@+id/edt_answer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_s"
                android:text="@string/action_check"
                app:layout_constraintLeft_toRightOf="@+id/btn_skip"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_skip"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <TextView
                android:id="@+id/txt_question_success"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_xs"
                android:textSize="@dimen/font_size_m"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:text="@string/hint_success_answer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_answer"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_s"
                android:text="@string/action_next"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_question_success"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_to_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="btn_check,btn_skip"
                tools:visibility="visible"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_after_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="btn_next,txt_question_success"
                tools:visibility="gone"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="txt_answer_header,edt_answer"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>